# gnu_guile-pg

./: .cvsignore  .gitignore  ANNOUNCE  ANONCVS  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  acinclude.m4  aclocal-suffix  aclocal.m4  autogen.sh  bcruft.h  config.h.in  configure  configure.ac  configure.in  fcruft.h  gpl-text.c  gpl-text.scm  guile-pg.c  guile-pg.h  guile-pg.project  guile.m4.snap  libpostgres.c  libpostgres.h  libpostgres_lo.c  modsup.h.snap  tmpfile.c  tmpfile.h  wily-guile.in
bugtest/: README  postgres-lo-fix-1.patch  postgres-lo-fix-2.patch  testcon.scm  testlob.scm  testlobseek.scm  testloclose.c  testloseek.c  testloseek.scm  testloseek2.c  testlotell.c  testwrite.scm
build-aux/: common.mk  determine-guile-libsite-dir.m4  guile-pg.m4  guile-tools-existsp.m4  guile.m4.snap  snuggle.m4  sofix  sofix.m4  uninstall-sofixed
contrib/: README
contrib/Ian.Grant/: abstractions.scm
contrib/ttn/: display-table.scm  markup.scm  pgmeta.scm  pgtable.scm  pgtype.scm  psql.scm
doc/: .cvsignore  .make-automake-frags  .twerp-list  Makefile.am  Makefile.in  cov  guile-pg.texi  guile-pg.twerp  mkinc  ref.texh
scm/: .cvsignore  Makefile.am  Makefile.in  postgres-col-defs.scm  postgres-gxrepl.scm  postgres-meta.scm  postgres-qcons.scm  postgres-resdisp.scm  postgres-resx.scm  postgres-table.scm  postgres-types.scm  postgres.scm.in
src/: ChangeLog  Makefile.am  fcruft.h  gi.h  libpq.c  libpq.org  modsup.h.snap  postgres-col-defs.scm  postgres-gxrepl.scm  postgres-meta.scm  postgres-qcons.scm  postgres-resdisp.scm  postgres-resx.scm  postgres-table.scm  postgres-types.scm  tmpfile.h
test/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  OK  abstraction-scm-tests.sh  alive.scm  alive.sh  basic-tests.sh  basic.scm  cleanup.scm  config.scm.in  cov  coverage.sh  create.sh.in  drop.sh.in  fake-cluster-control  guile-pg-abstraction-scm-tests.scm  guile-pg-basic-tests.scm  guile-pg-basic-tests.scm.in  guile-pg-lo-tests.scm  guile-pg-lo-tests.scm.in  large.scm  lo-tests.sh  meta.scm  runtest.in  show-platform  show-platform.in  testing.scm  types-table.scm
